# C-Code-Dump

./: .cspell.json  .gitignore  .jscpd.json  .ls-lint.yml  .mega-linter.yml  CMakeLists.txt  README.md  format.sh
.devcontainer/: Dockerfile  devcontainer.json  oh-my-posh-installer.sh
.github/workflows/: mega-linter.yml
src/: bank_management_system.c  binary_search.c  bubble_sort.c  bucket_sort.c  calendar.c  index_finder.c  linear_search.c  pattern_printer.c  pointer.c  preprocessor_code.c  quadratic_roots_finder.c  queue.c  queue_single_linked_list.c  single_linked_list.c  stack_single_linked_list.c  struct_db.c  struct_db_2.c  structs.c
src/2 pass assembler/: 2passAsembler.c  input_opcode.txt
src/CD/: q1.c  q3.c  q6.c  q8.c
src/pointers/: address_unaffected.c  array_pointer_manipulation.c  constant_pointer.c  function_pointer.c  malloc_function_pointer.c  pointer_address.c  pointer_increment.c  pointer_to_char_array.c  pointer_to_character_pointer.c  pointer_to_character_ptr.c  pointer_to_garbage.c  pointer_to_int_array.c  printing_pointer.c  ptr16.c  void_pointer_float.c  void_pointer_int.c
to-sort-out/: cs1.c
